# RevokeMe

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: scan.py  validate.py
backend/app/chain/: __init__.py  contracts.py  logs.py  rpc.py
backend/app/services/: approval_scanner.py  categorizer.py  risk_engine.py  spender_analyzer.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/results/: page.module.css  page.tsx
